[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Laser.gd" type="Script" id=1]
[ext_resource path="res://sounds/laser_shoot.wav" type="AudioStream" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 24.0

[node name="Laser" type="Area2D" groups=[
"Lasers",
]]
position = Vector2( 240.55, 271.096 )
collision_layer = 32
collision_mask = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, -24 )
width = 4.0
default_color = Color( 0.466667, 0.74902, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -2, -26, 4, 28 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
